<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbarBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarTheme"
        app:titleTextColor="@color/searchTextColor" />

    <View
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/toolbar"/>

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seperator"
        android:paddingBottom="20dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="true"
                    android:textColor="@color/searchTextColor"
                    android:textSize="12sp"
                    android:text="@string/rating_count"/>

                <TextView
                    android:id="@+id/text_rating_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="true"
                    android:textColor="@color/searchTextColor"
                    android:textSize="12sp"
                    android:text="@string/average_rating"/>

                <TextView
                    android:id="@+id/text_average_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="true"
                    android:textColor="@color/searchTextColor"
                    android:textSize="12sp"
                    android:text="@string/most_approved_platform"/>

                <TextView
                    android:id="@+id/text_most_approved_platform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="true"
                    android:textColor="@color/searchTextColor"
                    android:textSize="12sp"
                    android:text="@string/most_refused_platform"/>

                <TextView
                    android:id="@+id/text_most_refused_platform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="true"
                    android:textColor="@color/searchTextColor"
                    android:textSize="12sp"
                    android:text="@string/most_approved_browser"/>

                <TextView
                    android:id="@+id/text_most_approved_browser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="true"
                    android:textColor="@color/searchTextColor"
                    android:textSize="12sp"
                    android:text="@string/most_refused_browser"/>

                <TextView
                    android:id="@+id/text_most_refused_browser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_top"
        android:paddingTop="10dp"
        android:background="@drawable/radius_layout_bg">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

                <LinearLayout
                    android:id="@+id/layout_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_graph_platform_distribution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom_border"
                        android:paddingBottom="20dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/blueTextColor"
                            android:textSize="15sp"
                            android:text="@string/platform_distribution"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_graph_browser_distribution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom_border"
                        android:paddingBottom="20dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/blueTextColor"
                            android:textSize="15sp"
                            android:text="@string/browser_distribution"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_graph_country_distribution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom_border"
                        android:paddingBottom="20dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/blueTextColor"
                            android:textSize="15sp"
                            android:text="@string/country_distribution"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_graph_average_rating_per_platform"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom_border"
                        android:paddingBottom="20dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/blueTextColor"
                            android:textSize="15sp"
                            android:text="@string/average_ratings_per_platform"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_graph_average_rating_per_browser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom_border"
                        android:paddingBottom="20dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/blueTextColor"
                            android:textSize="15sp"
                            android:text="@string/average_ratings_per_browser"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_graph_average_rating_per_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom_border"
                        android:paddingBottom="20dp"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/blueTextColor"
                            android:textSize="15sp"
                            android:text="@string/average_ratings_per_country"/>

                    </LinearLayout>


                </LinearLayout>

        </ScrollView>


    </RelativeLayout>


</RelativeLayout>